--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@ div.arxivfeed {margin-bottom: 5px; width:140px;}
 <a href="http://arxiv.org/abs/2202.05797"> Distributionally Robust Data Join.</a>
 Pranjal Awasthi, Christopher Jung, Jamie Morgenstern.<br>
 
-
+<a href="http://arxiv.org/abs/2209.07312">Multicalibrated Regression for Downstream Fairness.</a>Ira Globus-Harris and Varun Gupta and Christopher Jung and Michael
+  Kearns and Jamie Morgenstern and Aaron Roth<br>
 
 <a href="https://arxiv.org/abs/2206.02667">Multi-learner risk reduction under endogenous participation dynamics.</a>
 Sarah Dean, Mihaela Curmei, Lillian J. Ratliff, Jamie Morgenstern, Maryam Fazel
@@ -272,7 +273,11 @@ Chris Russel, Claire Zhang.</td><td></td></tr>
 <tr><th>NeurIPS 2018</th><td> <a href="http://arxiv.org/abs/1811.00103">The Price of Fair PCA: One Extra Dimension. </a> </td><td> Samira Samadi, Uthaipon Tantipongpipat, Mohit Singh, Jamie Morgenstern, and Santosh Vempala.</td><td></td></tr>
 </tr>
       
-      <tr><th>NeurIPS 2018</th><td> <a href="https://arxiv.org/abs/1801.03423">A Smoothed Analysis of the Greedy Algorithm.</a> </td><td> Sampath Kannan, Jamie Morgenstern, Aaron Roth, Bo Waggoner, and Steven Wu.</td><td></td></tr>
+      <tr><th>NeurIPS 2018</th><td> <a
+ href="https://arxiv.org/abs/1801.03423">A Smoothed Analysis of the
+ Greedy Algorithm.</a> </td><td> Sampath Kannan, Jamie Morgenstern,
+   Aaron Roth, Boes
+   Waggoner, and Steven Wu.</td><td></td></tr>
 
       <tr><th>ICML 2017</th><td> <a href="https://arxiv.org/abs/1611.03071">Fairness in Reinforcement Learning.</a> </td><td>  Shahin Jabbari, Matthew Joseph, Michael Kearns, Jamie Morgenstern, and Aaron Roth.</td><td></td></tr>
 
