--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <li>
       <a href="#">Teaching &#65516;</a>
       <ul class="hidden">
+		<li><a href="https://courses.cs.washington.edu/courses/cse446/23wi/"> Introduction to Machine Learning (Winter 2023)</a></li>
+		<li><a href="https://courses.cs.washington.edu/courses/cse446/22au/"> Introduction to Machine Learning (Fall 2022)</a></li>
+
+	
 	<li><a href="https://courses.cs.washington.edu/courses/cse599j/22wi/"> Foundations :) of Fairness in Machine Learning  (Winter 2022)</a></li>
 	
 	<li><a href="https://courses.cs.washington.edu/courses/cse547/21au/"> Introduction to Machine Learning  (Fall 2021)</a></li>
@@ -119,8 +123,6 @@ div.arxivfeed {margin-bottom: 5px; width:140px;}
 -->
 
 
-<a href="http://arxiv.org/abs/2202.05797"> Distributionally Robust Data Join.</a>
-Pranjal Awasthi, Christopher Jung, Jamie Morgenstern.<br>
 
 <a href="http://arxiv.org/abs/2209.07312">Multicalibrated Regression for Downstream Fairness.</a>Ira Globus-Harris and Varun Gupta and Christopher Jung and Michael
   Kearns and Jamie Morgenstern and Aaron Roth<br>
@@ -216,6 +218,11 @@ Graduate Women's Scholarship.
   <table class="t2" >
 
     <tbody>
+
+
+      <th> FORC 2023</th><td>
+<a href="http://arxiv.org/abs/2202.05797"> Distributionally Robust Data Join.</a></td><td>
+Pranjal Awasthi, Christopher Jung, Jamie Morgenstern.</td><td></td></tr>
 
       <th>NeurIPS 2022 </th><td> <a
       href="https://arxiv.org/abs/2206.11183">Active learning with
