--- a/index.html
+++ b/index.html
@@ -123,10 +123,6 @@ div.arxivfeed {margin-bottom: 5px; width:140px;}
 -->
 
 
-
-<a href="http://arxiv.org/abs/2209.07312">Multicalibrated Regression for Downstream Fairness.</a>Ira Globus-Harris and Varun Gupta and Christopher Jung and Michael
-  Kearns and Jamie Morgenstern and Aaron Roth<br>
-
 <a href="https://arxiv.org/abs/2206.02667">Multi-learner risk reduction under endogenous participation dynamics.</a>
 Sarah Dean, Mihaela Curmei, Lillian J. Ratliff, Jamie Morgenstern, Maryam Fazel
 <br>
@@ -218,6 +214,19 @@ Graduate Women's Scholarship.
   <table class="t2" >
 
     <tbody>
+
+
+      
+      <th> AIES 2023</th> <td>
+	Evaluation of targeted dataset collection on racial equity in face recognition.</td><td>
+Rachel Hong, Tadayohsi Kohno, and Jamie Morgenstern.</td><td></td></tr>
+
+      
+
+<th> AIES 2023</th> <td> 
+	<a href="http://arxiv.org/abs/2209.07312">Multicalibrated Regression for Downstream Fairness.</a>/td><td>
+	Ira Globus-Harris and Varun Gupta and Christopher Jung and Michael
+  Kearns and Jamie Morgenstern and Aaron Roth.</td><td></td></tr>
 
 
       <th> FORC 2023</th><td>
