--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@ Roberta Katz, Gene Kimmelman, and A. Douglas Melamed. <br>
 	<h2 id="Mentoring">Mentoring </h2>
 	I'm  very fortunate  to be advising the following excellent students:<br>
 
-       Rachel Hong (PhD) <br>
-       Daniel Jiang   (PhD) <br>
+      <a href="https://rachelhong.me/"> Rachel Hong </a>(PhD) <br>
+       <a href="https://danieljiang.me/"> Daniel Jiang </a>   (PhD) <br>
        Jie (Claire) Zhang  (PhD) <br>
        Yuanyuan (Chloe) Yang (PhD) <br>
 	<a href="http://bhuveshkumar.com/">Bhuvesh Kumar</a> (PhD, SCS, joint with Jake Abernethy)<br>
@@ -173,11 +173,11 @@ Roberta Katz, Gene Kimmelman, and A. Douglas Melamed. <br>
 
 
        
-        Aditya Saraf (MS) <br>
-	Benjamin Wilson (MS)<br>
-        Angel (Alex) Cabrera, (BS) <br>
-        Varun Gupta,(BS) <br>
-Dhamma Kimpara, (BS) <br>
+        <a href="https://adityasaraf.github.io/"> Aditya Saraf </a> (MS) <br>
+	<a href="https://benjaminrwilson.com/"> Benjamin Wilson </a> (MS)<br>
+        <a href="https://cabreraalex.com/"> Angel (Alex) Cabrera</a> (BS) <br>
+        <a href="https://vgup.me/"> Varun Gupta </a> (BS) <br>
+<a href="https://dkimpara.github.io/"> Dhamma Kimpara </a> (BS) <br>
 <r>
 	And excellent postdocs:<br>
 	<a href="http://matthaeus-kleindessner.at/">Matthäus Kleindessner </a><br>
@@ -224,7 +224,7 @@ Rachel Hong, Tadayohsi Kohno, and Jamie Morgenstern.</td><td></td></tr>
       
 
 <th> AIES 2023</th> <td> 
-	<a href="http://arxiv.org/abs/2209.07312">Multicalibrated Regression for Downstream Fairness.</a>/td><td>
+	<a href="http://arxiv.org/abs/2209.07312">Multicalibrated Regression for Downstream Fairness.</a>/<td><td>
 	Ira Globus-Harris and Varun Gupta and Christopher Jung and Michael
   Kearns and Jamie Morgenstern and Aaron Roth.</td><td></td></tr>
 
