--- a/index.html
+++ b/index.html
@@ -160,20 +160,25 @@ Roberta Katz, Gene Kimmelman, and A. Douglas Melamed. <br>
 
 
 	<h2 id="Mentoring">Mentoring </h2>
-	I'm  very fortunate  to be advising the following excellent students:<br>
+	I'm  very fortunate to have worked with the following excellent students.<br>
 
+<h3 >	Current students:</h3>
       <a href="https://rachelhong.me/"> Rachel Hong </a>(PhD) <br>
-       <a href="https://danieljiang.me/"> Daniel Jiang </a>   (PhD) <br>
-       Jie (Claire) Zhang  (PhD) <br>
+          Jie (Claire) Zhang  (PhD) <br>
        Yuanyuan (Chloe) Yang (PhD) <br>
-	<a href="http://bhuveshkumar.com/">Bhuvesh Kumar</a> (PhD, SCS, joint with Jake Abernethy)<br>
+
+
+  <h3>   Past students and visitors: </h3>
+    <a href="https://danieljiang.me/"> Daniel Jiang </a>   (MS) <br>
+      <a href="http://bhuveshkumar.com/">Bhuvesh Kumar</a> (PhD, SCS, joint with Jake Abernethy)<br>
         <a href="https://adityasaraf.github.io/"> Aditya Saraf </a> (MS) <br>
 	<a href="https://benjaminrwilson.com/"> Benjamin Wilson </a> (MS)<br>
         <a href="https://cabreraalex.com/"> Angel (Alex) Cabrera</a> (BS) <br>
         <a href="https://vgup.me/"> Varun Gupta </a> (BS) <br>
 <a href="https://dkimpara.github.io/"> Dhamma Kimpara </a> (BS) <br>
 <r>
-	And excellent postdocs:<br>
+ <h3> Postdoctoral researchers </h3> <br>
+  <a href="mjsong32.github.io"> Min Jae Song</a>
 	<a href="http://matthaeus-kleindessner.at/">Matthäus Kleindessner </a><br>
 <a href="https://sdean.website/">Sarah Dean</a> <br>
 <h2 id="service">Service </h2>
