--- a/index.html
+++ b/index.html
@@ -214,6 +214,19 @@ Graduate Women's Scholarship.
 
     <tbody>
 
+      <th> NeurIPS 2023</th><td>
+<a href="https://arxiv.org/abs/2305.19475"> Doubly Constrained Fair Clustering</a>
+<td> John Dickerson, Seyed Esmaeili, Jamie Morgenstern, Claire Jie Zhang
+</td><td></td></tr>
+
+
+
+      <th> NeurIPS 2023</th><td>
+  <a href=" https://arxiv.org/abs/2307.03694">
+	   Scalable Membership Inference Attacks via Quantile Regression.</a>
+<td> Martin Bertran, Shuai Tang, Aaron Roth, Michael Kearns, Jamie Morgenstern, Steven Wu
+</td><td></td></tr>
+
 
       
       <th> AIES 2023</th> <td>
