--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ Roberta Katz, Gene Kimmelman, and A. Douglas Melamed. <br>
 <a href="https://dkimpara.github.io/"> Dhamma Kimpara </a> (BS) <br>
 <r>
  <h3> Postdoctoral researchers </h3> <br>
-  <a href="mjsong32.github.io"> Min Jae Song</a>
+  <a href="mjsong32.github.io"> Min Jae Song</a> <br>
 	<a href="http://matthaeus-kleindessner.at/">Matthäus Kleindessner </a><br>
 <a href="https://sdean.website/">Sarah Dean</a> <br>
 <h2 id="service">Service </h2>
@@ -236,7 +236,7 @@ Graduate Women's Scholarship.
       
 
 <th> AIES 2023</th> <td> 
-	<a href="http://arxiv.org/abs/2209.07312">Multicalibrated Regression for Downstream Fairness.</a>/</td><td>
+	<a href="http://arxiv.org/abs/2209.07312">Multicalibrated Regression for Downstream Fairness.</a></td><td>
 	Ira Globus-Harris and Varun Gupta and Christopher Jung and Michael
   Kearns and Jamie Morgenstern and Aaron Roth.</td><td></td></tr>
 
