--- a/index.html
+++ b/index.html
@@ -196,9 +196,9 @@ EC PC in 2016.
 
 My research is currently supported by:
 
-An NSF Career award, "Strategic and Equity Considerations in Machine Learning".
+An NSF Career award, "Strategic and Equity Considerations in Machine Learning". <!--
  The <a href="https://ml.utexas.edu/ifml">Institute for Foundations of Machine Learning</a>, an NSF-funded AI Center joint
-between UT Austin, UW, Witchitaw State, and Microsoft Research.
+between UT Austin, UW, Witchitaw State, and Microsoft Research.-->
 <a href="https://toc4fairness.org/"> The Theory of Computing for Fairness</a>, A Simons collaboration project.
 
 Previously, I was  fortunate to be supported by the Simons
@@ -213,6 +213,47 @@ Graduate Women's Scholarship.
   <table class="t2" >
 
     <tbody>
+      <th>  NeurIPS 2024</th><td>
+      <a href="https://arxiv.org/pdf/2312.11846"> Initializing services in interactive ml systems for diverse users
+      <td>
+Avinandan Bose, Mihaela Curmei, Daniel L Jiang, Jamie Morgenstern, Sarah Dean, Lillian J Ratliff, Maryam Fazel
+      </td><td></td></tr>
+
+
+      <th>  NeurIPS 2024</th><td>
+      <a href="http://arxiv.org/2405.20272"> Reconstruction Attacks on Machine Unlearning: Simple Models are Vulnerable</a>
+      <td>
+	Martin Bertran, Shuai Tang, Michael Kearns, Jamie Morgenstern, Aaron Roth, Zhiwei Steven Wu
+      </td><td></td></tr>
+
+
+      <th> EAAMO 2024</th><td>
+      <a href="https://dl.acm.org/doi/pdf/10.1145/3689904.3694702">Who's in and who's out? A case study of multimodal CLIP-filtering in DataComp
+      <td>
+Rachel Hong, William Agnew, Tadayoshi Kohno, Jamie Morgenstern
+      </td><td></td></tr>
+
+
+
+
+
+      <th> UAI 2024</th><td>
+<a href="https://proceedings.mlr.press/v238/dean24a/dean24a.pdf">
+  Emergent specialization from participation dynamics and multi-learner retraining.</a>
+<td>
+Sarah Dean, Mihaela Curmei, Lillian Ratliff, Jamie Morgenstern, Maryam Fazel
+</td><td></td></tr>
+
+
+
+      <th> UAI 2024</th><td>
+<a href="https://arxiv.org/abs/2312.08559">
+Fair Active Learning in Low-Data Regimes
+</a>
+<td>
+Romain Camilleri, Andrew Wagenmaker, Jamie Morgenstern, Lalit Jain, Kevin Jamieson
+</td><td></td></tr>
+
 
       <th> NeurIPS 2023</th><td>
 <a href="https://arxiv.org/abs/2305.19475"> Doubly Constrained Fair Clustering</a>
